unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/TMS_Full_Shipping_Order_Stg__c.object-meta.xml
<CustomObject>
    <description>Staging Table for Quote and Freight Item to send data to Mercury Gate TMS</description>
    <label>TMS Full Shipping Order Stg</label>
    <nameField>
        <label>TMS Quote Freight Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMS Full Shipping Orders Stg</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>