unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Additional_Labor__c.field-meta.xml
<CustomField>
    <fullName>Additional_Labor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Labor</label>
    <type>Checkbox</type>
</CustomField>