unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Addl_Information__c.field-meta.xml
<CustomField>
    <fullName>Addl_Information__c</fullName>
    <label>Addl Information</label>
    <type>TextArea</type>
</CustomField>