unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Advance_Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>Advance_Order_Discount__c</fullName>
    <label>IN Advance Order Discount (%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>