unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/AGS_Beyond_Point__c.field-meta.xml
<CustomField>
    <fullName>AGS_Beyond_Point__c</fullName>
    <label>AGS Beyond Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>