unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/AM_Specified__c.field-meta.xml
<CustomField>
    <fullName>AM_Specified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Specified</label>
    <type>Checkbox</type>
</CustomField>