unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Attempt__c.field-meta.xml
<CustomField>
    <fullName>Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attempt</label>
    <type>Checkbox</type>
</CustomField>