unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Beyond_Point__c.field-meta.xml
<CustomField>
    <fullName>Beyond_Point__c</fullName>
    <label>Beyond Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>