unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <label>Customer Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>