unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Billing_Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_FirstName__c</fullName>
    <label>Billing Contact FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>