unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Booth__c.field-meta.xml
<CustomField>
    <fullName>Booth__c</fullName>
    <label>Booth Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>