unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <label>Booth #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>