unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Call_Before_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Call_Before_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Before Pickup</label>
    <type>Checkbox</type>
</CustomField>