unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Carrier_Notes__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Notes__c</fullName>
    <label>Carrier Notes</label>
    <type>TextArea</type>
</CustomField>