unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Complete_By__c.field-meta.xml
<CustomField>
    <fullName>Complete_By__c</fullName>
    <label>Complete By</label>
    <type>Date</type>
</CustomField>