unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Copy_to_OB_Destination_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_to_OB_Destination_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy to OB Destination Address</label>
    <type>Checkbox</type>
</CustomField>