unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Copy_To_OB_Pickup_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_To_OB_Pickup_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy To OB Pickup Address</label>
    <type>Checkbox</type>
</CustomField>