unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/CORE_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>CORE_Order_Number__c</fullName>
    <label>CORE Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>