unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Delivery_Booth_No__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Booth_No__c</fullName>
    <label>Delivery Booth #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>