unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Delivery_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Fax__c</fullName>
    <label>Delivery Contact Fax</label>
    <type>Phone</type>
</CustomField>