unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Delivery_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Phone__c</fullName>
    <label>Delivery Contact Phone</label>
    <type>Phone</type>
</CustomField>