unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Delivery_Show_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Show_Contractor__c</fullName>
    <label>Delivery Show Contractor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>