unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country__c</fullName>
    <label>Destination Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>