unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Destination_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_State__c</fullName>
    <label>Destination State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>