unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Destination_Street__c.field-meta.xml
<CustomField>
    <fullName>Destination_Street__c</fullName>
    <label>Destination Street</label>
    <type>TextArea</type>
</CustomField>