unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Dim_Weight__c.field-meta.xml
<CustomField>
    <fullName>Dim_Weight__c</fullName>
    <label>Dim Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>