unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Discount_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Discount_End_Date__c</fullName>
    <label>Discount End Date</label>
    <type>Date</type>
</CustomField>