unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/EDV_Amount__c.field-meta.xml
<CustomField>
    <fullName>EDV_Amount__c</fullName>
    <label>EDV Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>