unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/EDV_Amount_Exceeds_Limit__c.field-meta.xml
<CustomField>
    <fullName>EDV_Amount_Exceeds_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm EDV &gt; 20,000</label>
    <type>Checkbox</type>
</CustomField>