unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <length>18</length>
    <type>Text</type>
</CustomField>