unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/FI_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FI_CreatedDate__c</fullName>
    <label>FI CreatedDate</label>
    <type>DateTime</type>
</CustomField>