unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/FI_Id__c.field-meta.xml
<CustomField>
    <fullName>FI_Id__c</fullName>
    <label>FI Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>