unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/FI_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>FI_LastModifiedById__c</fullName>
    <label>FI LastModifiedById</label>
    <length>18</length>
    <type>Text</type>
</CustomField>