unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Flat_Rate_Unit_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Unit_Price_Type__c</fullName>
    <label>Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>