unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Fuel_Unit_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Unit_Surcharge__c</fullName>
    <label>Fuel Unit Surcharge</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>