unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Hazardous_Materials__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous Materials</label>
    <type>Checkbox</type>
</CustomField>