unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>