unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/HM_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>HM_Contact_Phone__c</fullName>
    <label>HM Contact Phone</label>
    <type>Phone</type>
</CustomField>