unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/IN_Beyond_Point_Fee__c.field-meta.xml
<CustomField>
    <fullName>IN_Beyond_Point_Fee__c</fullName>
    <label>IN Beyond Point Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>