unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Inbound_Stage__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Stage__c</fullName>
    <label>Inbound Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>