unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Lift_Gate_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Lift_Gate_Surcharge__c</fullName>
    <label>IN Lift Gate Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>