unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>