unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Lost_Comment__c.field-meta.xml
<CustomField>
    <fullName>Lost_Comment__c</fullName>
    <label>Lost Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>