unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>