unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Merged_AR_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Merged_AR_Customer_Number__c</fullName>
    <label>Merged AR Customer Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>