unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Note_Details__c.field-meta.xml
<CustomField>
    <fullName>Note_Details__c</fullName>
    <label>Quote Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>