unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Additional_Labor__c.field-meta.xml
<CustomField>
    <fullName>OB_Additional_Labor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB Additional Labor</label>
    <type>Checkbox</type>
</CustomField>