unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Addl_Information__c.field-meta.xml
<CustomField>
    <fullName>OB_Addl_Information__c</fullName>
    <label>OB Addl Information</label>
    <type>TextArea</type>
</CustomField>