unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_AM_Specified__c.field-meta.xml
<CustomField>
    <fullName>OB_AM_Specified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB AM Specified</label>
    <type>Checkbox</type>
</CustomField>