unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Attempt__c.field-meta.xml
<CustomField>
    <fullName>OB_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB Attempt</label>
    <type>Checkbox</type>
</CustomField>