unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Carrier_Notes__c.field-meta.xml
<CustomField>
    <fullName>OB_Carrier_Notes__c</fullName>
    <label>OB Carrier Notes</label>
    <type>TextArea</type>
</CustomField>