unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>OB_Class_of_Service__c</fullName>
    <label>OB Class of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>