unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Custom_Quote__c.field-meta.xml
<CustomField>
    <fullName>OB_Custom_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB Custom Quote</label>
    <type>Checkbox</type>
</CustomField>