unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Delivery_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>OB_Delivery_Contact_Email__c</fullName>
    <label>OB Delivery Contact Email</label>
    <type>Email</type>
</CustomField>