unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Delivery_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>OB_Delivery_Contact_Phone__c</fullName>
    <label>OB Delivery Contact Phone</label>
    <type>Phone</type>
</CustomField>