unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>OB_Delivery_Date__c</fullName>
    <label>OB Delivery Date</label>
    <type>Date</type>
</CustomField>