unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Delivery_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>OB_Delivery_Window_Start__c</fullName>
    <label>OB Delivery Window Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>