unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Destination_Address__c.field-meta.xml
<CustomField>
    <fullName>OB_Destination_Address__c</fullName>
    <label>OB Destination Address</label>
    <length>18</length>
    <type>Text</type>
</CustomField>