unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Destination_City__c.field-meta.xml
<CustomField>
    <fullName>OB_Destination_City__c</fullName>
    <label>OB Destination City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>