unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>OB_Destination_Country__c</fullName>
    <label>OB Destination Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>