unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Destination_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>OB_Destination_Postal_Code__c</fullName>
    <label>OB Destination Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>