unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Destination_Street__c.field-meta.xml
<CustomField>
    <fullName>OB_Destination_Street__c</fullName>
    <label>OB Destination Street</label>
    <type>TextArea</type>
</CustomField>