unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Facility__c.field-meta.xml
<CustomField>
    <fullName>OB_Facility__c</fullName>
    <label>OB Facility</label>
    <length>18</length>
    <type>Text</type>
</CustomField>