unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Facility_LMS_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>OB_Facility_LMS_Facility_ID__c</fullName>
    <label>OB Facility LMS Facility ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>