unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Inside_Pickup__c.field-meta.xml
<CustomField>
    <fullName>OB_Inside_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB Inside Pickup</label>
    <type>Checkbox</type>
</CustomField>