unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Inside_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>OB_Inside_Surcharge__c</fullName>
    <label>OB Inside Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>