unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Lift_Gate__c.field-meta.xml
<CustomField>
    <fullName>OB_Lift_Gate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB Lift Gate</label>
    <type>Checkbox</type>
</CustomField>