unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_NY_City__c.field-meta.xml
<CustomField>
    <fullName>OB_NY_City__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NY City</label>
    <type>Checkbox</type>
</CustomField>