unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Pallet_Jack__c.field-meta.xml
<CustomField>
    <fullName>OB_Pallet_Jack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB Pallet Jack</label>
    <type>Checkbox</type>
</CustomField>