unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Palletization__c.field-meta.xml
<CustomField>
    <fullName>OB_Palletization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB Palletization</label>
    <type>Checkbox</type>
</CustomField>