unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Pickup_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>OB_Pickup_Contact_Email__c</fullName>
    <label>OB Pickup Contact Email</label>
    <type>Email</type>
</CustomField>