unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Pickup_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>OB_Pickup_Contact_Name__c</fullName>
    <label>OB Pickup Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>