unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>OB_Pickup_Date__c</fullName>
    <label>OB Pickup Date</label>
    <type>Date</type>
</CustomField>