unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Pickup_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>OB_Pickup_Window_Start__c</fullName>
    <label>OB Pickup Window Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>