unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Pickup_Window_Start_Late__c.field-meta.xml
<CustomField>
    <fullName>OB_Pickup_Window_Start_Late__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB Confirm Pickup Start Time After 14:00</label>
    <type>Checkbox</type>
</CustomField>