unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Round_Trip_Discount__c.field-meta.xml
<CustomField>
    <fullName>OB_Round_Trip_Discount__c</fullName>
    <label>OB Round Trip Discount (%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>