unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Selection__c.field-meta.xml
<CustomField>
    <fullName>OB_Selection__c</fullName>
    <label>OB Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>