unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>OB_Service_Type__c</fullName>
    <label>OB Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>