unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>OB_Shipment_Type__c</fullName>
    <label>OB Shipment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>