unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>OB_Sub_Total__c</fullName>
    <label>OB Sub Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>