unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>OB_Unit_Price__c</fullName>
    <label>OB Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>