unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>OB_Wait_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB Wait Time (Non GES)</label>
    <type>Checkbox</type>
</CustomField>