unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Wait_Time_Fee__c.field-meta.xml
<CustomField>
    <fullName>OB_Wait_Time_Fee__c</fullName>
    <label>OB Wait Time Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>