unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/OB_Weekend_Delivery__c.field-meta.xml
<CustomField>
    <fullName>OB_Weekend_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OB Weekend Delivery (Non GES)</label>
    <type>Checkbox</type>
</CustomField>